data in the stores page configured into table

--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -1,4 +1,13 @@
+<style>
+    table, th, td{
+        border: 1px solid black;
+    }
+</style>
+
+
+
 <table>
+    <a href="">Add Store</a>
     <tr>
       <th>SID</th>
       <th>Location</th>
@@ -15,6 +24,7 @@
       </tr>
       <% }) %>
     </table>
+    <a href="">Home</a>
   
   
     <script>
