--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -4,10 +4,10 @@
     }
 </style>
 
-
+ 
 
 <table>
-    <a href="">Add Store</a>
+   <a href="">Add Store</a>
     <tr>
       <th>SID</th>
       <th>Location</th>
@@ -20,7 +20,7 @@
         <td><%= stores.sid %></td>
         <td><%= stores.location %></td>
         <td><%= stores.mgrid %></td>
-        <td><a href="">Update</a></td>
+        <td><a href="/stores/edit/:sid">Update</a></td>
       </tr>
       <% }) %>
     </table>
