--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -20,7 +20,9 @@
         <td><%= stores.sid %></td>
         <td><%= stores.location %></td>
         <td><%= stores.mgrid %></td>
-        <td><a href="/stores/edit/:sid">Update</a></td>
+        <td><a href="/stores/edit/<%= stores.sid %>">Update</a></td>
+        
+        
       </tr>
       <% }) %>
     </table>
