--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,16 +1,15 @@
 <h1>Edit Page</h1>
 <form action="/editStore" method="POST">
-    <% store.forEach((stores) => 
-    {%>
-    <label>SID</label>
-    <input name="sid" value="<%= store.sid %>" ></input>
-    <br>
-    <label>Location</label>
-    <input name="location" value="<%= store.location %>"></input>
-    <br>
-    <label>Manager ID</label>
-    <input name ="mgrid" value="<%= store.mgrid %>"></input>
-    <br>
+    <% store.forEach((stores) => { %>
+        <label>SID</label>
+        <input name="sid" value="<%= stores.sid %>" ></input>
+        <br>
+        <label>Location</label>
+        <input name="location" value="<%= stores.location %>"></input>
+        <br>
+        <label>Manager ID</label>
+        <input name="mgrid" value="<%= stores.mgrid %>"></input>
+        <br>
     <% }) %>
     <input type="submit" value="submit"></input>
 </form>
