--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,14 +1,14 @@
 <h1>Edit Page</h1>
-<form action="/editStore" method="POST">
+<form action="/stores/edit/:sid" method="POST">
     <% store.forEach((stores) => { %>
         <label>SID</label>
-        <input name="sid" value="<%= stores.sid %>" ></input>
+        <input name="sid" value="<%= stores.sid %>" readonly></input>
         <br>
         <label>Location</label>
-        <input name="location" value="<%= stores.location %>"></input>
+        <input name="location" value="<%= stores.location %>" minlength="1"></input>
         <br>
         <label>Manager ID</label>
-        <input name="mgrid" value="<%= stores.mgrid %>"></input>
+        <input name="mgrid" value="<%= stores.mgrid %>" maxlength="4"></input>
         <br>
     <% }) %>
     <input type="submit" value="submit"></input>
