--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <div>
     <ul>
         <li><a href="/stores">Stores</a></li>
-        <li><a href="url">Products</a></li>
+        <li><a href="/products">Products</a></li>
        <li><a href="url">Managers (MongoDB)</a></li> 
     </ul>
 </div>
