products page configured

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -23,7 +23,7 @@
         <td><%= products.sid %></td>
         <td><%= products.location %></td>
         <td><%= products.price %></td>
-        <a href ="" value="delete"></a>
+        <td><a href ="\">delete <%= products.productdesc %></a></td>
         
         
         
