--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,6 @@
     <ul>
         <li><a href="/stores">Stores</a></li>
         <li><a href="/products">Products</a></li>
-       <li><a href="url">Managers (MongoDB)</a></li> 
+       <li><a href="/managers">Managers (MongoDB)</a></li> 
     </ul>
 </div>
