--- a/views/managers.ejs
+++ b/views/managers.ejs
@@ -13,6 +13,7 @@
       <th>Name</th>
       <th>Salary</th>
     </tr>
+    <!--Manager Data loaded from mongoDB-->
   <% manager.forEach((managers) => 
       {%>
       <tr>
