--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -5,8 +5,9 @@
 </style>
 
  
-
+<h1>Stores</h1>
 <table>
+   <!-- Add Store Link -->
    <a href="">Add Store</a>
     <tr>
       <th>SID</th>
@@ -14,6 +15,7 @@
       <th>Manager ID</th>
       <th>Acion</th>
     </tr>
+    <!--Data renders from SQL database-->
   <% store.forEach((stores) => 
       {%>
       <tr>
